tests/baselines/reference/typeOfThisInStaticMembers4(target=es5).errors.txt
typeOfThisInStaticMembers4.ts(9,22): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.


==== typeOfThisInStaticMembers4.ts (1 errors) ====
    class C {
        static a = 1;
        static b = this.a + 1;
    }
    
    class D extends C {
        static c = 2;
        static d = this.c + 1;
        static e = super.a + this.c + 1;
                         ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
    }
    